--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="google-site-verification" content="_kepkB_EiPFNZv163QVMMCCMAYvgfbgxe9E1Slk-07o" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="手作り田畑の焼きまんじゅう" name="description">
+    <meta property="og:title" content="手作り田畑の焼きまんじゅう" />
+    <meta property="og:description" content="手作り田畑の焼きまんじゅう" />
+    <meta property="og:type" content="image/png" />
+    <meta property="og:url" content="https://mumei.github.io/tabata/" />
+    <meta property="og:image" content="https://mumei.github.io/tabata/topimage.png" />
+    <meta property="og:site_name" content="手作り田畑の焼きまんじゅう" />
+    <meta property="og:locale" content="ja_JP"  />
+    <meta name=”keywords” content=”焼きまんじゅう,田畑,田端,群馬,前橋,うどん,手作り”>
     <title>手作り田畑の焼きまんじゅう</title>
   </head>
   <body>
