--- a/index.html
+++ b/index.html
@@ -14,6 +14,51 @@
     <meta property="og:site_name" content="手作り田畑の焼きまんじゅう" />
     <meta property="og:locale" content="ja_JP"  />
     <meta name=”keywords” content=”焼きまんじゅう,田畑,田端,群馬,前橋,うどん,手作り”>
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org/",
+          "@type": "Restaurant",
+          "name": "手作り田畑の焼きまんじゅう",
+          "url": "https://tabata-yakimanju.com/",
+          "image": [
+              "https://tabata-yakimanju.com/topImage.png",
+              "https://tabata-yakimanju.com/img_0.png",
+              "https://tabata-yakimanju.com/img_2.png",
+              "https://tabata-yakimanju.com/kake.png"
+          ],
+          "priceRange": "$",
+          "servesCuisine": "焼きまんじゅう",
+          "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "49-2",
+              "addressLocality": "前橋市上泉町",
+              "addressRegion": "群馬県",
+              "postalCode": "3710007",
+              "addressCountry": "JP"
+          },
+          "geo": {
+              "@type": "GeoCoordinates",
+              "latitude": 36.395225,
+              "longitude": 139.102703
+          },
+          "openingHoursSpecification": [
+              {
+                  "@type": "OpeningHoursSpecification",
+                  "dayOfWeek": [
+                      "Sunday",
+                      "Monday",
+                      "Tuesday",
+                      "Thursday",
+                      "Friday",
+                      "Friday",
+                      "Saturday"
+                  ],
+                  "opens": "08:30",
+                  "closes": "17:00"
+              }
+          ]
+      }
+    </script>
     <title>手作り田畑の焼きまんじゅう</title>
   </head>
   <body>
