--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           "@type": "Restaurant",
           "name": "手作り田畑の焼きまんじゅう",
           "url": "https://tabata-yakimanju.com/",
+          "telephone": "070-8506-0272",
           "image": [
               "https://tabata-yakimanju.com/topImage.png",
               "https://tabata-yakimanju.com/img_0.png",
