--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           "name": "手作り田畑の焼きまんじゅう",
           "url": "https://tabata-yakimanju.com/",
           "telephone": "070-8506-0272",
+          "menu": "https://tabata-yakimanju.com/#menu",
           "image": [
               "https://tabata-yakimanju.com/topImage.png",
               "https://tabata-yakimanju.com/img_0.png",
