--- a/404.html
+++ b/404.html
@@ -1,20 +1,67 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="_kepkB_EiPFNZv163QVMMCCMAYvgfbgxe9E1Slk-07o" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta content="手作り田畑の焼きまんじゅう" name="description">
-    <meta property="og:title" content="手作り田畑の焼きまんじゅう" />
-    <meta property="og:description" content="手作り田畑の焼きまんじゅう" />
-    <meta property="og:type" content="image/png" />
-    <meta property="og:url" content="https://tabata-yakimanju.com/" />
-    <meta property="og:image" content="https://tabata-yakimanju.com/topImage.png" />
-    <meta property="og:site_name" content="手作り田畑の焼きまんじゅう" />
-    <meta property="og:locale" content="ja_JP"  />
-    <meta name=”keywords” content=”焼きまんじゅう,田畑,田端,群馬,前橋,うどん,手作り”>
-    <title>手作り田畑の焼きまんじゅう</title>
+      <meta charset="UTF-8" />
+      <meta name="google-site-verification" content="_kepkB_EiPFNZv163QVMMCCMAYvgfbgxe9E1Slk-07o" />
+      <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta content="手作り田畑の焼きまんじゅう" name="description">
+      <meta property="og:title" content="手作り田畑の焼きまんじゅう" />
+      <meta property="og:description" content="手作り田畑の焼きまんじゅう" />
+      <meta property="og:type" content="image/png" />
+      <meta property="og:url" content="https://tabata-yakimanju.com/" />
+      <meta property="og:image" content="https://tabata-yakimanju.com/topImage.png" />
+      <meta property="og:site_name" content="手作り田畑の焼きまんじゅう" />
+      <meta property="og:locale" content="ja_JP"  />
+      <meta name=”keywords” content=”焼きまんじゅう,田畑,田端,群馬,前橋,うどん,手作り”>
+      <script type="application/ld+json">
+          {
+              "@context": "https://schema.org/",
+              "@type": "Restaurant",
+              "name": "手作り田畑の焼きまんじゅう",
+              "url": "https://tabata-yakimanju.com/",
+              "telephone": "070-8506-0272",
+              "menu": "https://tabata-yakimanju.com/#menu",
+              "image": [
+                  "https://tabata-yakimanju.com/topImage.png",
+                  "https://tabata-yakimanju.com/img_0.png",
+                  "https://tabata-yakimanju.com/img_2.png",
+                  "https://tabata-yakimanju.com/kake.png"
+              ],
+              "priceRange": "$",
+              "servesCuisine": "焼きまんじゅう",
+              "address": {
+                  "@type": "PostalAddress",
+                  "streetAddress": "49-2",
+                  "addressLocality": "前橋市上泉町",
+                  "addressRegion": "群馬県",
+                  "postalCode": "3710007",
+                  "addressCountry": "JP"
+              },
+              "geo": {
+                  "@type": "GeoCoordinates",
+                  "latitude": 36.395225,
+                  "longitude": 139.102703
+              },
+              "openingHoursSpecification": [
+                  {
+                      "@type": "OpeningHoursSpecification",
+                      "dayOfWeek": [
+                          "Sunday",
+                          "Monday",
+                          "Tuesday",
+                          "Thursday",
+                          "Friday",
+                          "Friday",
+                          "Saturday"
+                      ],
+                      "opens": "09:00",
+                      "closes": "15:00"
+                  }
+              ]
+          }
+      </script>
+      <title>手作り田畑の焼きまんじゅう</title>
   </head>
   <body>
     <div id="app"></div>
